a1/tests/reject/16.ul
int foo() {
	25 +- 3;
}
